--- a/part5.tex
+++ b/part5.tex
@@ -141,3 +141,99 @@
     \end{tabularx}
     \label{table: 5.1}
 \end{table}
+
+Адлічэнні на сацыяльныя патрэбы (АСП) уключаюць адлічэнні ў фонд
+сацыяльнай абароны і адлічэнні ў Белдзяржстрах на страхаванне ад
+няшчасных выпадкаў і прафейсійных захворванняў.
+
+Адлічэнне на сацыяльныя патрэбы вылічваюцца па формуле
+(\ref{eqn: eqn6}):
+
+\begin{equation}
+    \label{eqn: eqn6}
+    \text{АСП} = \text{ФСАН} + \text{БДС}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{ФСАН}$ --- адлічэнні ў фонд сацыяльнай абароны насельніцтва, руб;
+    \item $\text{БДС}$ --- адлічэнне ў Белдзяржстрах на страхаванне ад няшчасных выпадкаў і прафейсійных захворванняў, руб.
+\end{Explanation}
+
+Сума адлічэнняў у фонд сацыяльнай абароны насельніцтва вызначаецца
+ў працэнтаў ад сумы асноўнай і дадатковай заработнай платы ўсіх катэгорый супрацоўнікаў, якія маюць дачыненне да выканання распрацоўкі праграмнага забеспячэння.
+
+Адлічэнне ў фонд сацыяльнай абароны насельніцтва вызначаюцца па формуле (\ref{eqn: eqn7}):
+
+\begin{equation}
+    \label{eqn: eqn7}
+    \text{ФСАН} = \frac{\text{ЗАП} \cdot \text{S}_\text{ФСАН}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{S}_\text{ФСАН}$ --- стаўка адлічэнняў у фонд сацыяльнай абароны насельніцтва (34\%).
+\end{Explanation}
+
+Адлічэнні ў Белдзяржстрах на страхаванне ад няшчаных выпадкаў і прафесійных захворванняў разлічваецца па формуле (\ref{eqn: eqn8}):
+
+\begin{equation}
+    \label{eqn: eqn8}
+    \text{БДС} = \frac{\text{ЗАП} \cdot \text{H}_\text{БДС}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{H}_\text{БДС}$ --- нарматыў адлічэнняў у Белдзяржстрах, устаноўлены для арганізацыі (0,6\%).
+\end{Explanation}
+
+Выдаткі па артыкулу <<Матэрыялы і складнікі вырабу>> (М) вызначаюцца
+на падстаце каштарысу выдаткаў, якая распрацоўваецца на праграмны
+прадукт з улікам дзеючых нарматываў. Па дадзенаму артыкулу выдаткаў
+адлюстроўваюцца выдаткі на знешнія прылады памяці, картрыджы, паперу і да таго падобнага. Сума выдаткаў на расходныя матэрыялы,
+неабходныя для распрацоўкі прадукту, вызначаюцца паводле нарматыву
+ў працэнтах да фонду заработнай платы распрацоўшчыкаў, які ўстанаўліваецца арганізацыяй на ўзроўні 3-5\%.
+
+Выдаткі па артыкулу <<Матэрыялы і складнікі вырабу>> разлічваецца
+па формуле (\ref{eqn: eqn9}):
+
+\begin{equation}
+    \label{eqn: eqn9}
+    \text{M} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{МЗ}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{H}_\text{МЗ}$ --- норма расходу матэрыялаў ад асноўнай заработнай платы (3\%).
+\end{Explanation}
+
+Расход па артыкулу <<Навуковыя камандзіроўкі>> вызначаецца па нарматыву расходу на камандзіроўкі ў цэлым на арганізацыю да асноўнай заработнай платы ў працэнтах.
+
+Расход па артыкулу <<Навуковыя камандзіроўкі>> ($\text{P}_\text{НК}$) вызначаецца па формуле (\ref{eqn: eqn10}):
+
+\begin{equation}
+    \label{eqn: eqn10}
+    \text{P}_\text{НК} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{РНК}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{H}_\text{РНК}$ --- нарматыў расходу на камандзіроўкі ў цэлам на арганізацыю (10\%).
+\end{Explanation}
+
+Расход па артыкулу <<Іншыя прамыя выдаткі>> $\text{ІВ}$ на праграмнае забеспячэнне ўключае выдаткі на набыццё і падрыхтоўку спецыяльнай навукова-тэхнічнай інфармацыі і спецыяльнай літаратуры.
+
+Іншыя прамыя выдаткі разлічваюцца па формуле (\ref{eqn: eqn11}):
+
+\begin{equation}
+    \label{eqn: eqn11}
+    \text{ІВ} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{ІВ}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{H}_\text{ІВ}$ --- нарматыў іншых выдаткаў у цэлым на арганізацыю (20\%).
+\end{Explanation}
+
+Расход па артыкулу <<Накладныя выдаткі>>, звязаныя з неабходнасцю
+выдаткаў на агульнагаспадарчыя патрэбы, адносяцца на канкрэтны праграмны прадукт
+паводле нарматыву накладных выдаткаў ў працэтных адносінах да асноўнай заработнай платы выканаўцаў. Нарматыў складаецца ў цэлым на арганізацыю і складае 10\%.
+
+Выдаткі па артыкулу <<Накладныя выдаткі>> разлічваецца па формуле (\ref{eqn: eqn12}):
+\begin{equation}
+    \label{eqn: eqn12}
+    \text{P}_\text{H} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{РН}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{Р}_\text{H}$ --- накладныя выдаткі на канкрэтны праграмны прадукт, руб;
+    \item $\text{H}_\text{РН}$ --- нарматыў накладных выдаткаў у цэлым на арганізацыю (10\%).
+\end{Explanation}
+
