--- a/part5.tex
+++ b/part5.tex
@@ -228,6 +228,7 @@
 паводле нарматыву накладных выдаткаў ў працэтных адносінах да асноўнай заработнай платы выканаўцаў. Нарматыў складаецца ў цэлым на арганізацыю і складае 10\%.
 
 Выдаткі па артыкулу <<Накладныя выдаткі>> разлічваецца па формуле (\ref{eqn: eqn12}):
+
 \begin{equation}
     \label{eqn: eqn12}
     \text{P}_\text{H} = \frac{\text{З}_\text{o} \cdot \text{H}_\text{РН}}{100}
@@ -237,3 +238,60 @@
     \item $\text{H}_\text{РН}$ --- нарматыў накладных выдаткаў у цэлым на арганізацыю (10\%).
 \end{Explanation}
 
+Агульная сума выдаткаў ($\text{C}_\text{П}$) па ўсіх артыкулах каштарысу на праграмны прадукт разлічваецца па формуле (\ref{eqn: eqn13}):
+
+\begin{equation}
+    \label{eqn: eqn13}
+    \text{C}_\text{П} = \text{ЗАП} + \text{АСП} + \text{M}
+    + \text{Р}_\text{НК} + \text{ІВ} + \text{P}+\text{Н}
+\end{equation}
+
+Прагназуемая цана праграмнага прадукту ($\text{Ц}_\text{ОТП}$) разлічваецца па формуле (\ref{eqn: eqn14}):
+
+\begin{equation}
+    \label{eqn: eqn14}
+    \text{Ц}_\text{ОТП} = \text{C}_\text{П} + \text{П} + \text{ПДК}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{П}$ --- планавы прыбытак, руб;
+    \item ПДК --- падатак на дадатковы кошт, руб.
+\end{Explanation}
+
+Прыбытак (П) неабходна вызначыць з запланаванай нормы рэнтабельнасці.
+
+Прыбытак разлічваецца па формуле (\ref{eqn: eqn15}):
+
+\begin{equation}
+    \label{eqn: eqn15}
+    \text{П} = \frac{\text{C}_\text{П} \cdot \text{P}_\text{П}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{P}_\text{П}$ --- узровень рэнтабельнасці (15\%).
+\end{Explanation}
+
+Падатак на дадатковы кошт (ПДК), які ўключаецца ў цану праграмнага прадукту, разлічваецца па формуле (\ref{eqn: eqn16}):
+
+\begin{equation}
+    \label{eqn: eqn16}
+    \text{НДС} = \frac{\text{C}_\text{П} \cdot \text{S}_\text{ПДК}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{S}_\text{ПДК}$ --- стаўка падатку на дадатковы кошт (25\%).
+\end{Explanation}
+
+Арганізацыя-распрацоўшчык удзельнічае ў асваенні праграмнага прадукту і нясе адпаведныя выдаткі, на якія складаецца каштарыс, які аплачваецца заказчыкам паводле дагавору. Каштарысам прадугледжваецца не толькі выдаткі, аднак і падаткі, які прадугледжваюцца заканадаўствам, і прыбытак арганізацыі-распрацоўшчыка.
+
+Выдаткі на асваенне вызначаюцца па формуле (\ref{eqn: eqn17}):
+
+\begin{equation}
+    \label{eqn: eqn17}
+    \text{P}_\text{а} = \frac{\text{C}_\text{П} \cdot \text{H}_\text{a}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{P}_\text{a}$ --- выдаткі на асваенне;
+    \item $\text{H}_\text{a}$ --- нарматыў выдаткаў на асваенне (10\%).
+\end{Explanation}
+
+Арганізацыя-распрацоўшчык удзельнічае ў асваенні праграмнага прадукту і нясе адпаведныя выдаткі, на якія складаецца каштарыс, які аплачваецца заказчыкам паводле дагавору. Каштарысам прадугледжваецца не толькі выдаткі, аднак і падаткі, які прадугледжваюцца заканадаўствам, і прыбытак арганізацыі-распрацоўшчыка.
+
+Выдаткі на асваенне вызначаюцца па формуле (\ref{eqn: eqn17}):
