--- a/part5.tex
+++ b/part5.tex
@@ -133,10 +133,10 @@
         & 21
         & 99,12
         & 99,12
-        & 99,12  \\
+        & 109,03  \\
     \hline
         \multicolumn{8}{|l|}{Усяго}
-        & 99,12 \\
+        & 109,03 \\
     \hline
     \end{tabularx}
     \label{table: 5.1}
@@ -243,14 +243,14 @@
 \begin{equation}
     \label{eqn: eqn13}
     \text{C}_\text{П} = \text{ЗАП} + \text{АСП} + \text{M}
-    + \text{Р}_\text{НК} + \text{ІВ} + \text{P}+\text{Н}
+    + \text{Р}_\text{НК} + \text{ІВ} + \text{P}_\text{Н}
 \end{equation}
 
-Прагназуемая цана праграмнага прадукту ($\text{Ц}_\text{ОТП}$) разлічваецца па формуле (\ref{eqn: eqn14}):
+Прагназуемая цана праграмнага прадукту ($\text{Ц}_\text{АДП}$) разлічваецца па формуле (\ref{eqn: eqn14}):
 
 \begin{equation}
     \label{eqn: eqn14}
-    \text{Ц}_\text{ОТП} = \text{C}_\text{П} + \text{П} + \text{ПДК}
+    \text{Ц}_\text{АДП} = \text{C}_\text{П} + \text{П} + \text{ПДК}
 \end{equation}
 \begin{Explanation}
     \item[дзе] $\text{П}$ --- планавы прыбытак, руб;
@@ -276,7 +276,7 @@
     \text{НДС} = \frac{\text{C}_\text{П} \cdot \text{S}_\text{ПДК}}{100}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{S}_\text{ПДК}$ --- стаўка падатку на дадатковы кошт (25\%).
+    \item[дзе] $\text{S}_\text{ПДК}$ --- стаўка падатку на дадатковы кошт (20\%).
 \end{Explanation}
 
 Арганізацыя-распрацоўшчык удзельнічае ў асваенні праграмнага прадукту і нясе адпаведныя выдаткі, на якія складаецца каштарыс, які аплачваецца заказчыкам паводле дагавору. Каштарысам прадугледжваецца не толькі выдаткі, аднак і падаткі, які прадугледжваюцца заканадаўствам, і прыбытак арганізацыі-распрацоўшчыка.
@@ -292,6 +292,70 @@
     \item $\text{H}_\text{a}$ --- нарматыў выдаткаў на асваенне (10\%).
 \end{Explanation}
 
-Арганізацыя-распрацоўшчык удзельнічае ў асваенні праграмнага прадукту і нясе адпаведныя выдаткі, на якія складаецца каштарыс, які аплачваецца заказчыкам паводле дагавору. Каштарысам прадугледжваецца не толькі выдаткі, аднак і падаткі, які прадугледжваюцца заканадаўствам, і прыбытак арганізацыі-распрацоўшчыка.
+Апроч таго, арганізацыя-распрацоўшчык нясе выдаткі на суправаджэнне праграмнага забеспячэння, якое вызначаецца па формуле (\ref{eqn: eqn18}):
 
-Выдаткі на асваенне вызначаюцца па формуле (\ref{eqn: eqn17}):
+\begin{equation}
+    \label{eqn: eqn18}
+    \text{P}_\text{c} = \frac{\text{C}_\text{П} \cdot \text{H}_\text{c}}{100}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{P}_\text{с}$ --- выдаткі на суправаджэнне;
+    \item $\text{H}_\text{с}$ --- нарматыў выдаткаў на суправаджэнне (20\%).
+\end{Explanation}
+
+Агульная сума выдаткаў на распрацоўку ($\text{C}_\text{ПП}$) з выдаткамі на асваенне і суправаджэнне, як поўны сабекошт праграмнага прадукту, вызначаецца па формуле (\ref{eqn: eqn19}):
+
+\begin{equation}
+    \label{eqn: eqn19}
+    \text{C}_\text{ПП} = \text{C}_\text{П} + \text{Р}_\text{а} + \text{Р}_\text{с}
+\end{equation}
+
+Вынікі разліку пералічаных вышэй паказальнікаў прадстаўлены ў табліцы \ref{table: last}.
+
+\clearpage
+
+\begin{table}[htp]
+    \caption{Разлік сабекошту і адпускной цаны праграмнага прадукту}
+    \begin{tabularx}{\textwidth}{ 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X |
+    }
+    \hline
+    Назва артыкулу выдаткаў & Умоўныя адзнакі & Значэнне, руб \\
+    \hline
+    Адлічэнні ў фонд сацыяльнай абароны насельніцтва & ФСАН & 37,07 \\
+    \hline
+    Адлічэнні ў Белдзяржстрах & БДС & 0,65 \\
+    \hline
+    Матэрыялы і складнікі & М & 2,97 \\
+    \hline
+    Навуковыя камандыроўкі & $\text{Р}_\text{НК} $ & 9,91 \\
+    \hline
+    Іншыя правыя выдаткі & ІВ & 19,82 \\
+    \hline
+    Накладныя выдаткі & $\text{Р}_\text{Н}$ & 9,91 \\
+    \hline
+    Поўны сабекошт & $\text{С}_\text{П}$ &  169,54 \\
+    \hline
+    Планавы прыбытак & П & 25,43 \\
+    \hline
+    Падатак на дадатковы кошт & ПДК & 33,90 \\
+    \hline
+    Адпускная цана & $\text{Ц}_\text{АДП}$ & 228,87 \\
+    \hline
+    \end{tabularx}
+    \label{table: last}
+\end{table}
+
+\subsection{Вынікі}
+
+Падас выканання разліку сабекошту і цаны праграмнага прадукту атрыманы наступныя значэнні: асноўная сумарная заработная плата з улікам прэміі склала 109,03 рублі, адлічэнні ў фонд сацыяльнай абароны склалі 37,07 рублёў, адлічэнні ў Белдзяржстрах на страхаванне ад няшчасных выпадкаў склалі 0,65 рублёў.
+
+Адпускная цана праграмнага прадукту, з улікам выдаткаў на аплату працы, адлічэнняў на сацыяльныя патрэбы, выдаткі на матэрыялы, выдаткі на навуковыя камандзіроўкі, іншыя прамыя выдаткі, падатку на дадатковы кошт і чаканага прыбытку, склада 228,87 рублёў, пры гэтым планавы прыбытак склаў 25,43 рублі.
+
+Аднак, неабходна заўважыць, што нягледзячы на невялікі прамы прыбытак праграмнага прадукту, ён дазволіць арганізацыі значна скараціць выдаткі на:
+\begin{enumerate}
+    \item сеткавае абсталяванне, так як выкарыстанне дадзенага праграмнага прадукту дазваляе выкарыстоўваць больш простае сеткавае абсталяванне без уплыву на якасць прадастаўленых паслуг;
+    \item заработную плату супрацоўнікаў, так як дадзены праграмны прадукт спрашчае канфігурацыю сеткавага абсталявання і яе падтрымку, што дазваляе аптымізаваць работу сеткавых інжынераў, што, у сваю чаргу, прывядзе да змяншэння штату сеткавых інжынераў.
+\end{enumerate}
