--- a/part5.tex
+++ b/part5.tex
@@ -22,7 +22,7 @@
     \item памяншэнне працазатрат на суправаджэнне сеткі. Так як ўся інфармацыя і канфігурацыя
         маршрутызатараў знаходзіцца ў адным месцы, то супрацоўнікі патрабуецца менш часу для
         карэктыроўкі канфігурацыі пры неабходнасці;
-    \item павелічэнне эфектыўнасці выкарыстання рэсурсаў секті. Кантролер дазваляе адсочваць
+    \item павелічэнне эфектыўнасці выкарыстання рэсурсаў сеткі. Кантролер дазваляе адсочваць
         характарыстыкі ўстройств у рэльным часе, што дазваляе аўтаматычна змяняць канфігурацыю
         ўстройства для дасягнення аптымальнай канфігурацыі ў кожны момант часу.
 \end{enumerate}
@@ -347,6 +347,8 @@
     \end{tabularx}
     \label{table: last}
 \end{table}
+
+\vspace{-\baselineskip}
 
 \subsection{Вынікі}
 
