--- a/part4.tex
+++ b/part4.tex
@@ -235,6 +235,27 @@
 
 Эрганоміка --- навуковая і практычная дысцыпліна, якая сфармавалася на стыку псіхалогіі, фізіялогіі, гігіены працы, біямеханікі, антрапалогіі і шэрагу тэхнічных навук. Міждысцыплінарнае вывучэнне чалавека ці групы людзей ва ўмовах іх дзейнасці з прымяненнем тэхнічных сродкаў складае сутнасць эрганомікі. як навуковай дысцыпліны. Эрганамічныя даследаванні падпарадкаваны задачам праектавання і арыентаваны на пераўтваральнае-праектнае дзеянне, а не на пазнанне. Асноўны аб'ект даследавання эрганомікі --- сістэма «чалавек-машына». Эрганоміка вывучае пэўныя ўласцівасці гэтай сістэмы, абумоўленыя месцам і роляй чалавека ў ёй, якія атрымалі назву «чалавечага фактару» у тэхніцы. Гэтыя ўласцівасці не зводзяцца да асобных характарыстык чалавека, машыны, прадмета дзейнасці і асяроддзя. Чалавечыя фактары ў тэхніцы ўяўляюць сабой інтэгральныя паказчыкі сувязі чалавека, машыны, прадмета і асяроддзя; яны існуюць «тут і цяпер», канкрэтна выяўляюцца падчас ўзаемадзеяння чалавека і тэхнічнай сістэмы.
 
+Асноўная дзейнасць арганізацыі <<ЭПАМ Сістэмз>> з'яўляецца
+распрацоўка і падтрымка праграмнага забеспячэння, таму большасць супрацоўнікаў
+праводзяць увесь працоўны дзень за камп'ютарам.
+
+Напрыклад, у залежнасці ад офіса ў арганізацыі выкарыстоўваецца ад
+200 да некалькі тысяч камп'ютарных месцаў, пры гэтым на кожным паверсе
+прадугледжана дадатковая офісаная тэхніка: сканэр, прынтэр.
+
+Трэба ўлічваць, што працоўная дзейнасць за камп'ютарам з'яўляецца фізічна слаба актыўным заняткам, патрабуе доўгай канцэнтрацыі розуму пры знаходжанні рашэння для задачы, патрабуе дадатковую нагрузку на вочы, так як погляд можна быць доўга сканцэнтраваны на невялікім аб'екце, пры гэтым камп'ютарныя маніторы выпраменьваюць штучнае святло не звыклае для чалавека (прамое замест адлюстраванага).
+
+У арганізацыі <<ЭПАМ Сістэмз>> прадугледжаны 8 гадзінны працоўны дзень
+(з 9 да 18 гадзіны), дзе:
+\begin{enumerate}
+    \item абавязковае знаходжанне ў офісе з 10 да 16 гадзін;
+    \item аб 11 і 15 гадзіне прадугледжаны 20 хвілінныя адпачынкі;
+    \item абедзенны час з 13 да 14 гадзіны.
+\end{enumerate}
+
+Вышэй апісаныя факты сцвярджаю неабходнасць дадатковай увагі да эрганомікі
+працоўнага месца ў арганізацыі.
+
 Для дасягнення найлепшых рэзультатаў эрганоміка выкарыстоўвае даныя і метады некалькіх дысцыплін:
 \begin{enumerate}
     \item антрапаметрыя: памеры цела, формы, варыяцыі;
@@ -286,6 +307,14 @@
 Забараняецца размяшчаць працоўныя месцы з ВДТ, ЭВМ і ПЭВМ на адлегласці менш за 10 м ад сілавых кабеляў, уводаў і высакавольтных трансформатараў. Памяшканні, дзе размяшчаюцца працоўныя месцы з ВДТ, ЭВМ і ПЭВМ, павінны быць абсталяваны ахоўным зазямленне (зануленнем) у адпаведнасці з тэхнічнымі патрабаваннямі па эксплуатацыі.
 
 Памяшканні з ВДТ, ЭВМ і ПЭВМ павінны быць абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй.
+
+Адпаведна вышэй апісаным патрабаванням у арганізацыі <<ЭПАМ Сістэмз>> памяшканні з ВДТ, ЭВМ і ПЭВМ размяшчаюцца ў добра прасторных асветленых памяшканнях 
+(прыроднае і штучнае святло). Кожнаму супрацоўніку на працоўным месцы
+прадастаўляецца стол памерам 2x1,7 метраў і больш, эрганамічнае камп'ютарнае крэсла з рэгуліроўкай вышыні і спінкі. Прадугледжана
+штучнае асвятленне над кождным працоўным месцы, а таксама магчымасць атрымаць кожным супрацоўнікам дадатковую настольную лямпу.
+
+У адкрытых фарматах памяшканняў працоўнае месца прадугледжвае
+перагародкі па перыметру стала.
 
 \subsection{Вынікі і прапановы}
 
