--- a/part1.tex
+++ b/part1.tex
@@ -1,6 +1,5 @@
-\section{Канцэпцыя праграмна-вызначаных сетак}
+\section{Канцэпцыя праграмна-вызначаных сетак і асаблівасці іх рэалізацыі}
 
-% УЗЯТА З ARTICLE_1 (шукай малюнкі там)
 З'яўленне сеткі Інтэрнэт прывяло да стварэння лічбавага грамадства, у якім
 амаль усе прылады злучаны паміж сабой і даступны з любога пункту свету.
 Аднак нягледзячы на сваю распаўсюджанасць, сеткі IP маюць складаную структуру, і імі
@@ -223,7 +222,6 @@ switch). У выніку openflow-камутатар адпраўляе паке
             \item выкарыстоўванне пратакола EIGRP.
         \end{enumerate}
 \end{enumerate}
-
 
 \subsubsection{Гібрыдная мадэль.}
 Другі падыход да рэалізацыі канцэпцыі SDN ---
