--- a/preface.tex
+++ b/preface.tex
@@ -27,4 +27,23 @@ SDN на аснове пратакола маршрутызацыі EIGRP.
 тапалогіі, пры гэтым дазволіўшы маршрутызатару адаптаваць тапалогію сеткі адносна сеткавых параметраў
 у рэальным часе.
 
+Прадметам даследвання ў дыпломным праекце з'яўляецца размеркаванне патокаў трафіка ў гібрыдных сетках SDN на базе EIGRP пратакола.
+
+МЭта дыпломнга праекта --- праграмна змадэліраваць размеркаванне
+патокаў трафіку ў сетках SDN гібрыднай мадэлі на базе распрацаванага алгарытму пераразліку метрыкі
+і тапалогіі на сеткавых устройствах для EIGRP пратакола ў рэальным часе
+ў залежнасці ад нагрузкі на інтэрфейсах устройства.
+
+Актуальнасць тэмы дыпломнага праекта прадыктавана неабходнасцю
+змянення падыходаў кіравання патокамі трафіка ў інфакамунікацыйных сетках
+у сувязі з пастаянным павелічэннем аб'ёму інфармацыі, якую неабходна
+перадаваць у гэтых сетках.
+
+Перадумовы для даследванняў і распрацовак новых падыходаў пры пабудове
+SDN сетак гібрыднай мадэлі сфармуляваны немагчымасцю хутка замяніць
+інфраструктуру традыцыйный сетак новым пакаленнем SDN устройств у сувязі маштабаў неабходных
+работ і эканамічных выдаткаў. У той час як гібрыдная мадэль SDN сетак
+прадастаўляе магчымасць пры нязначных змяненнях інфраструктуры традыцыйных сетак атрымаць перавагі ў кіраванні і падтрымцы сеткі, уласцівыя праграмна-вызначаным сеткам.
+
+
 \clearpage
