--- a/preface.tex
+++ b/preface.tex
@@ -41,7 +41,7 @@ SDN на аснове пратакола маршрутызацыі EIGRP.
 
 Перадумовы для даследванняў і распрацовак новых падыходаў пры пабудове
 SDN сетак гібрыднай мадэлі сфармуляваны немагчымасцю хутка замяніць
-інфраструктуру традыцыйный сетак новым пакаленнем SDN устройств у сувязі маштабаў неабходных
+інфраструктуру традыцыйных сетак новым пакаленнем SDN устройств у сувязі маштабаў неабходных
 работ і эканамічных выдаткаў. У той час як гібрыдная мадэль SDN сетак
 прадастаўляе магчымасць пры нязначных змяненнях інфраструктуры традыцыйных сетак атрымаць перавагі ў кіраванні і падтрымцы сеткі, уласцівыя праграмна-вызначаным сеткам.
 
