--- a/part1.tex
+++ b/part1.tex
@@ -1,4 +1,4 @@
-\section{Канцэпцыя праграмна-вызначаных сетак і асаблівасці іх рэалізацыі}
+\section{Канцэпцыя праграмна-вызначаных сетак і асаблівасць яе рэалізацыі}
 
 З'яўленне сеткі Інтэрнэт прывяло да стварэння лічбавага грамадства, у якім
 амаль усе прылады злучаны паміж сабой і даступны з любога пункту свету.
@@ -241,8 +241,7 @@ switch). У выніку openflow-камутатар адпраўляе паке
 мадэлі з'яўляецца аб'яднанне пераваг цэнтралізаванай мадэлі SDN (аптымізацыя
 сеткі) і класічнай размеркаванай мадэлі (аднаўленне пасля збояў).
 Развіццё гібрыднай мадэлі апісвае міжнародны праект Open Day Light, прызваны паскорыць адаптацыю, садзейнічаць укараненню інавацый, знізіць рызыкі і стварыць больш празрысты падыход да стварэння праграмна-арыентаваных сетак.
-Праект падтрымліваецца вядучымі вытворцамі ў індустрыі: Cisco, Juniper Networks, Bro-
-cade, VMware і іншымі.
+Праект падтрымліваецца вядучымі вытворцамі ў індустрыі: Cisco, Juniper Networks, Brocade, VMware і іншымі.
 
 Асноўнай складанасцю пры рэалізацыі гібрыднай мадэлі SDN з'яўляецца інтэграцыя механізмаў праграмнага кіравання сеткай з існуючымі тэхналогіямі IP-сетак.
 
@@ -250,3 +249,73 @@ cade, VMware і іншымі.
 гэтай канцэпцыі дае магчымасць пашырыць функцыянальныя магчымасці сеткі за кошт
 стварэння яшчэ аднаго архітэктурнага ўзроўню плоскасці кіравання, на якім
 сканцэнтраваны інтэлектуальныя алгарытмы вынясення рашэнняў і стварэння канфігурацыі сеткі.
+
+\subsection{Задача размеркавання патокаў трафіка ў інфакамунікацыйных сетках}
+
+Задача размеркавання патокаў трафіка складаецца ў тым, каб для кожнай пары сеткавых устройств пабудаваць мноства маршрутаў і знайсці такія патокі, якія задавальняюць наступныя патрабаванні:
+\begin{enumerate}
+    \item даўжыня маршрутаў задавальняe зададзенаму абмежаванню на колькасць транзітных вузлоў;
+    \item у маршруце адсутнічаюць цыклы;
+    \item агульны кошт перадачы патокаў па сетцы мінімальны;
+    \item нагрузка ў сетцы збалансавана, г.зн. сеткавыя ўстройства сеткі загружаны раўнамерна;
+    \item колькасць маршрутаў, якія выкарыстоўваюцца для перадачы патокаў, мінімальна.
+    \item доля трафіка, якая не можа быць перададзена праз недахоп прапускной здольнасці, мінімальная;
+    \item затрымка перадачы інфармацыі па сетцы мінімальная;
+    \item імавернасць страты пакетаў мінімальная.
+\end{enumerate}
+
+Для развязвання задачы размеркавання патокаў трафіка ў традыцыйных сетках
+выкарыстоўваюцца пратаколы маршрутызацыі (напрыклад, BGP, OSPF, EIGRP, RIP, IS-IS), якія прадугледжваюць знаходжанне аптымальнага маршруту паміж двума сеткавымі ўстройствамі ў залежнасці ад пэўных характарыстык (метрык).
+Напрыклад, у пратаколе маршрутызацыі RIP выкарыстоўваецца колькасць транзітных вузлоў паміж канцавымі сеткавымі ўстройствамі, у той час як у
+пратаколе маршрутызацыі OSPF выкарыстоўваецца затрымка і прапускная здольнасць на каналах у маршруце паміж сеткавымі ўстройствамі.
+
+Галоўная асаблівасць традыцыйных сетак у развязванні задачы размеркавання патокаў трафіка
+з'яўляецца тое, што кожнае сеткавае ўстройства асобна будуе мноства маршрутаў на базе атрыманай інфармацыі ад суседніх сеткавых устройств і
+знаходзіць аптымальныя маршруты з пабудаванага мноства.
+
+Дадзеная асаблівасць абмяжоўвае магчымасці маштабавання дадзенага рашэння ў
+сувязі з тым, што:
+\begin{enumerate}
+    \item немагчымасць змяніць логіку прыняцця рашэння пратаколаў маршрутызацыі ў залежнасці ад
+    бягучай сітуацыі ў сетцы;
+    \item сеткавыя ўстройства з дыстанцыйна-вектарнымі пратаколамі маршрутызацыі (напрыклад, RIP)
+    атрымліваюць інфармацыю толькі ад напрамую падключаных сеткавых устройств, што прыводзіць да таго, што сеткавае ўстройства
+    не ведае поўную тапалогіі сетку, што павялівае магчымасць узнікнення
+    ў сетцы петляў і неаптымальных маршрутаў;
+    \item сеткавыя ўстройства з пратаколамі маршрутызацыі стану каналаў (напрыклад, IS-IS)
+    перад вызначэннем аптымальных маршрутаў будуць поўную тапалогію сеткі,
+    што прыводзіць да значных павелічэнняў неабходных вылічальных магутнасцяў на кожным устройстве ў сетцы.
+\end{enumerate}
+
+Развязванне задачы размеркавання патокаў трафіка ў сетках SDN пераносіцца на адмысловае ўстройства,
+якое забяспечвае апрацоўку інфармацыі з кожнага сеткавага ўстройства, пабудову поўнай тапалогіі сеткі, вылічэнне аптымальных маршрутаў і перадачу іх на пэўнае сеткавае ўстройства.
+Такі падыход спрашчае магчымасць ўнясення змяненняў ў логіку работы алгарытму, так як кантролер,
+а дакладней праграмнае забеспячэння, можа быць злёгкасцю змененае на іншае, альбо ўнесеные дадатковыя праўкі.
+
+Пры параўнанні падыходаў развязванян задачы размеркавання патокаў трафіку неабходна звярнуць увагу на магчымасць шматпаточнай маршрутызацыі ў
+традыцыйных і SDN сетках.
+
+Тэхналогія шматпаточнай маршрутызацыі заключаецца ў стварэнні некалькіх
+маршрутаў праходжання трафіка паміж памежнымі сеткавымі ўстройствамі
+праграмна-вызначаных сетак.
+
+У традыцыйных сетках існуе толькі адзін шлях праходжання трафіка паміж
+двума вузламі сеткі (выключэнні складаюць некаторыя рэдкія тэхналогіі, такія як Cisco - Multicast only Fast Re-Route).
+
+У праграмна-вызначаных сетках, дзякуючы таму, што пры перадачы трафіка
+камутатары аперыруюць толькі партамі і адрасамі загалоўкаў канальнага, сеткавага і транспартнага узроўняў, на кантролеры можна рэалізаваць розныя шляхі руху трафіка для розных характарыстык патоку, напрыклад, можна задаць шлях праходжання некалькіх TCP-сесій па розных каналах. У выніку з'яўляецца адразу некалькі пераваг:
+\begin{enumerate}
+    \item cтварэнне некалькіх маршрутаў паміж адпраўніком і атрымальнікам дазваляе максімальна прадуктыўна выкарыстоўваць магчымасці і прапускныя здольнасці сеткі;
+    \item павышаецца хуткасць перадачы даных унутры сеткі, што актуальна для высоканагружаных сервісаў;
+    \item памяншаецца час прастою трафіка пры абрыве нейкага з каналаў дзякуючы хуткаму пераключэнню на альтэрнатыўны маршрут;
+    \item павялічваецца надзейнасць дастаўкі адчувальных да страт і затрымак сервісаў шляхам адпраўкі карэкціруючых кодаў (напрыклад, код Хэмінга) або дубліруючага трафіка па іншых маршрутах пры невялікім павелічэнні трафіка ў сеткі.
+\end{enumerate}
+
+З вышэй апісанага можам зрабіць вынік, што традыцыйныя і праграмна-вызначаныя сеткі
+пры развязванні задачы размеркавання патокаў трафіка прытрымліваюцца процілеглых
+падходаў.
+
+Задачай дадзенага дыпломнага праекта з'яўляецца распрацаваць пашырынае развязвання задачы
+размеркавання патокаў трафіка ў традыцыйных сеткаў пры дапамозе канцэпцыі праграмна-вызначаных сетак (гібрыдная мадэль праграмнага-вызначаных сетак) і праграмна
+змадэліраваць яго работу ў віртуальнай сетцы.
+А іменна распрацаваць і запраграміраваць алгарытм для кантролера, які пашырае стандартныя магчымасці пратакола маршрутызацыі EIGRP па ўліку нагрузкі ў рэальным часу на інтэрфейсах сеткавага ўстройства.
