--- a/part2.tex
+++ b/part2.tex
@@ -1,5 +1,5 @@
 % Метод управления трафиком в гибридной программно-определяемой сети
-\section{Праграмнаe мадэліраваннe размеркавання патокаў у сетках SDN}
+\section{Распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
 
 На аснове вышэй апісаных вывадаў разгледзем гібрыдную мадэль SDN
 пабудаваную ў сетцы з пратаколам маршрутызацыі EIGRP.
@@ -115,7 +115,7 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
 стандартная і пашыраная. Стандартная метрыка, якая будзе выкарыстоўвацца ў дадзеным праекце, разлічваецца маршрутызатарам
 па формуле:
 \begin{equation}
-    CM = \left(K_1 \cdot BW_s + K_2 \cdot \frac{BW_s}{256 -Lo_\text{max}} + K_3 \cdot D_s\right) \cdot \left(\frac{K_5}{K4 + R_\text{min}}\right)
+    CM = \left(K_1 \cdot BW_s + K_2 \cdot \frac{BW_s}{256 -Lo_\text{max}} + K_3 \cdot D_s\right) \cdot \left(\frac{K_5}{K_4 + R_\text{min}}\right)
 \end{equation}
 \begin{Explanation}
     \item[дзе] $BW_s$ = $\frac{256 \cdot 10^7}{Bandwidth_\text{min}}$,
