--- a/part2.tex
+++ b/part2.tex
@@ -1,8 +1,43 @@
 % Метод управления трафиком в гибридной программно-определяемой сети
 \section{Распрацоўка праграмнага забеспячэння для кіравання трафікам ў гібрыдных сетках SDN}
 
-На аснове вышэй апісаных вывадаў разгледзем гібрыдную мадэль SDN
-пабудаваную ў сетцы з пратаколам маршрутызацыі EIGRP.
+ДЭЦЭНТРАЛІЗАВЫЯ/ЦЭНТРАЛІЗАВАНЫЯ АПІСАЦЬ
+ПАДВЕСЦІ ДА РАЗГЛЯДУ ТЫПАЎ АЛГАРЫТМАЎ
+
+\subsection{Тыпы алгарытмаў маршрутызацыі}
+
+Алгарытмы маршрутызацыі могуць быць класіфікаваны па тыпах.
+Напрыклад, алгарытмы могуць быць:
+\begin{enumerate}
+    \item статычнымі альбо дынамічнымі;
+    \item аднамаршрутнымі альбо шматмаршрутнымі;
+    \item аднаўзроўневымі альбо іерархічнымі;
+    \item з інтэлектам у галоўнай вылічальнай машыне альбо маршрутызатары;
+    \item унутрыдаменнымі і міждаменнымі;
+    \item алгарытмамі стану канала альбо дыстанцыйна-вектарнымі.
+\end{enumerate}
+
+Статычныя алгарытмы маршрутызацыі наогул наўрад ці з'яўляюцца
+алгарытмамі.
+Размеркаванне статычных табліц маршрутызацыі
+устанаўліваецца адміністратарам сеткі да пачатку маршрутызацыі. Яно не
+змяняецца, калі толькі адміністратар сеткі не зменіць яго. Алгарытмы,
+якія выкарыстоўваюць статычныя маршруты, простыя для распрацоўкі і добра
+працуюць у асяроддзях, дзе трафік сеткі адносна прадказальны, а схема
+сеткі адносна простая.
+
+Так як статычныя сістэмы маршрутызацыі не могуць рэагаваць на
+змены ў сетцы, яны, як правіла, лічацца непрыдатнымі для сучасных
+буйных, пастаянна зменлівых сетак. Большасць дамінуючых
+алгарытмаў маршрутызацыі --- дынамічныя.
+
+Дынамічныя алгарытмы маршрутызацыі падладжваюцца да зменлівых акалічнасцяў сеткі ў маштабе рэальнага часу. Яны выконваюць гэта шляхам аналізу паведамленняў аб абнаўленні маршрутызацыі. Калі ў паведамленні паказваецца, што мела месца змяненне сеткі, праграмы маршрутызацыі пералічваюць маршруты і рассылаюць новыя паведамленні аб карэкціроўцы маршрутызацыі. Такія паведамленні праходзяць па ўсёй сетцы, стымулюючы маршрутызатары зноўку выконваць свае алгарытмы і адпаведным чынам змяняць табліцы маршрутызацыі.
+
+Дынамічныя алгарытмы маршрутызацыі могуць дапаўняць статычныя маршруты там, дзе гэта неабходна. Напрыклад, можна распрацаваць <<маршрут апошняй надзеі>> (г.зн. маршрут, у які адсылаюцца ўсе неадпраўленыя па вызначаным маршруце пакеты). Такі маршрут выконвае ролю сховішча неадпраўленых 
+пакетаў, гарантуючы, што ўсе паведамленні будуць хаця б пэўным чынам апрацаваны.
+
+Некаторыя складаныя пратаколы маршрутызацыі забяспечваюць мноства маршрутаў да аднаго і таго ж пункта прызначэння. Такія шматмаршрутные алгарытмы робяць магчымай мультыплексную перадачу трафіка па шматлікіх лініях; аднамаршрутныя алгарытмы не могуць рабіць гэтага.
+Перавагі шматмаршрутных алгарытмаў відавочныя --- яны могуць забяспечыць значна большую прапускную здольнасць і надзейнасць.
 
 \subsection{Прынцып работы пратакола EIGRP}
 
