--- a/part4.tex
+++ b/part4.tex
@@ -308,9 +308,9 @@
 
 Памяшканні з ВДТ, ЭВМ і ПЭВМ павінны быць абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй.
 
-Адпаведна вышэй апісаным патрабаванням у арганізацыі <<ЭПАМ Сістэмз>> памяшканні з ВДТ, ЭВМ і ПЭВМ размяшчаюцца ў добра прасторных асветленых памяшканнях 
+Адпаведна вышэй апісаным патрабаванням у арганізацыі <<ЭПАМ Сістэмз>> памяшканні з ВДТ, ЭВМ і ПЭВМ размяшчаюцца ў прасторных добра асветленых памяшканнях 
 (прыроднае і штучнае святло). Кожнаму супрацоўніку на працоўным месцы
-прадастаўляецца стол памерам 2x1,7 метраў і больш, эрганамічнае камп'ютарнае крэсла з рэгуліроўкай вышыні і спінкі. Прадугледжана
+прадастаўляецца стол памерам 2x1,7 метраў і больш, эрганамічнае камп'ютарнае крэсла з рэгуліроўкай вышыні сядзення і нахілу спінкі. Прадугледжана
 штучнае асвятленне над кождным працоўным месцы, а таксама магчымасць атрымаць кожным супрацоўнікам дадатковую настольную лямпу.
 
 У адкрытых фарматах памяшканняў працоўнае месца прадугледжвае
