--- a/part2.tex
+++ b/part2.tex
@@ -39,6 +39,50 @@
 Некаторыя складаныя пратаколы маршрутызацыі забяспечваюць мноства маршрутаў да аднаго і таго ж пункта прызначэння. Такія шматмаршрутные алгарытмы робяць магчымай мультыплексную перадачу трафіка па шматлікіх лініях; аднамаршрутныя алгарытмы не могуць рабіць гэтага.
 Перавагі шматмаршрутных алгарытмаў відавочныя --- яны могуць забяспечыць значна большую прапускную здольнасць і надзейнасць.
 
+Некаторыя алгарытмы маршрутызацыі аперуюць ў плоскай
+прасторы, у той час як іншыя выкарыстоўваюць іерархічную маршрутызацыю. У аднаўзроўневай сістэме маршрутызацыі ўсе маршрутызатары роўныя ў адносінах адзін да аднаго. У іерархічнай сістэме маршрутызацыі некаторыя маршрутызатары фарміруюць тое, што складае аснову маршрутызацыі.
+Пакеты з небазовых маршрутызтараў перамяшчаюцца да базавых і прапускаюцца праз іх да таго часу, пакуль не дасягнуты агульнай вобласці пункта прызначэння. Пачынаючы з гэтага моманту, яны перамяшчаюцца ад апошняга базавага маршрутызатара праз адзін або некалькі небазовых маршрутызатараў да канчатковага пункта прызначэння.
+
+Сістэмы маршрутызацыі часта ўсталёўваюць лагічныя групы вузлоў, даменамі, або аўтаномнымі сістэмамі (AS), або абласцямі. У іерархічных сістэмах адны маршрутызатары якога-небудзь дамена могуць звязвацца з маршрутызатарамі іншых даменаў, у той час як іншыя маршрутызатары гэтага дамена могуць падтрымліваць сувязь з маршрутызатарамі толькі ў межах свайго дамена. У вельмі буйных сетках могуць існаваць дадатковыя іерархічныя ўзроўні. Маршрутызатары найвышэйшага іерархічнага ўзроўню ўтвараюць базу маршрутызацыі.
+
+Асноўнай перавагай іерархічнай маршрутызацыі з'яўляецца тое, што яна імітуе арганізацыю большасці кампаній і такім чынам, вельмі добра падтрымлівае іх схемы передачы трафіка. Большая частка сеткавай сувязі мае месца ў межах груп невялікіх кампаній (даменаў). Унутрадаменны маршрутызатарау неабходна ведаць толькі пра іншыя маршрутызатары ў межах свайго дамена, таму іх алгарытмы маршрутызацыі могуць быць спрошчанымі. Адпаведна можа быць паменшаны і трафік абнаўлення маршрутызацыі, які залежыць ад выкарыстоўванага алгарытму маршрутызацыі.
+
+Некаторыя алгарытмы маршрутызацыі мяркуюць, што канчатковы вузел крыніцы вызначае ўвесь маршрут. Звычайна гэта называюць маршрутызацыяй ад крыніцы. У сістэмах маршрутызацыі ад крыніцы маршрутызатары дзейнічаюць проста як устойства захоўвання і перасылкі пакета, без ўсякіх вылічэнняў адсылаючы яго да наступнага маршрутызатара.
+
+Іншыя алгарытмы мяркуюць, што галоўныя вылічальныя машыны нічога не ведаюць пра маршруты. Пры выкарыстанні гэтых алгарытмаў маршрутызатары вызначаюць маршрут праз аб'яднаную сетку, грунтуючыся на сваіх уласных разліках.
+
+У першай сістэме, разгледжанай вышэй, інтэлект маршрутызацыі знаходзіцца ў галоўнай вылічальнай машыне. У сістэме, разгледжанай у другім выпадку, інтэлектам маршрутызацыі надзелены самі маршрутызатары.
+
+Кампраміс паміж маршрутызацыяй з інтэлектам у галоўнай
+вылічальнай машыне і маршрутызацыяй з інтэлектам ў маршрутызатары дасягаецца шляхам супастаўлення аптымальнасці маршруту з непрадукцыйнымі аб'ёмамі трафіка. Сістэмы з інтэлектам у галоўнай вылічальнай машыне часцей выбіраюць найлепшыя маршруты, так як яны, як правіла, знаходзяць усе магчымыя маршруты да пункта прызначэння, перш чым пакет будзе сапраўды дасланы. Затым яны выбіраюць найлепшы маршрут, грунтуючыся на вызначэнні аптымальнасці дадзенай канкрэтнай сістэмы. Аднак акт вызначэння ўсіх маршрутаў часта патрабуе значнага аб'ёму трафіка і вялікай колькасці часу.
+
+Некаторыя алгарытмы маршрутызацыі дзейнічаюць толькі ў межах даменаў; іншыя --- як у межах даменаў, так і паміж імі. Прырода гэтых двух тыпаў алгарытмаў розная. Таму зразумела, што аптымальны алгарытм унутрыдаменнай маршрутызацыі не абавязкова будзе аптымальным
+алгарытмам міждаменнай маршрутызацыі.
+
+Алгарытмы стану канала накіроўваюць патокі маршрутнай інфармацыі ва ўсе вузлы аб'яднанай сеткі. Аднак кожны маршрутызатара пасылае толькі тую частку маршрутнай табліцы, якая апісвае стан яго ўласных каналаў. Алгарытмы дыстанцыйна-вектарныя патрабуюць ад каждогo маршрутызатара пасылкі ўсёй або часткі сваёй маршрутнай табліцы, але толькі сваім суседзям.
+
+Алгарытмы стану каналаў фактычна накіроўваюць невялікія карэкціроўкі па ўсіх напрамках, у той час як дыстанцыйна-вектарныя алгарытмы адсылаюць буйнейшыя карэкціроўкі толькі ў суседнія маршрутызатары.
+Адрозніваючыся хутчэйшай збежнасцю, алгарытмы стану каналаў некалькі менш схільныя да стварэння цыклаў маршрутызацыі, чым дыстанцыйна-вектарныя алгарытмы. З іншага боку, алгарытмы стану канала характарызуюцца больш складанымі разлікамі, патрабуючы большай працэсарнай магутнасці і памяці, чым дыстанцыйна-вектарныя алгарытмы. З прычыны гэтага, рэалізацыя і падтрымка алгарытмаў стану канала можа быць больш дарагой. Нягледзячы на іх адрозненні, абодва тыпы алгарытмаў добра функцыянуюць пры самых розных абставінах.
+
+У алгарытмах маршрутызацыі выкарыстоўваецца шмат розных паказчыкаў. Складаныя алгарытмы маршрутызацыі пры выбары маршруту могуць грунтавацца на мностве паказчыкаў, камбінуючы іх такім чынам, што ў выніку атрымліваецца адзін асобны (гібрыдны) паказчык. Ніжэй прыведзены некаторыя паказчыкі, якія могуць выкарыстоўваюцца ў алгарытмах маршрутызацыі:
+\begin{enumerate}
+    \item даўжыня маршруту;
+    \item надзейнасць;
+    \item затрымка;
+    \item шырыня паласа прпускания;
+    \item нагрузка;
+    \item кошт сувязі.
+\end{enumerate}
+
+Даўжыня маршруту з'яўляецца найбольш агульным паказчыкам маршрутызацыі. Некаторыя пратаколы маршрутызацыі дазваляюць адміністратарам сеткі прызначаць адвольныя кошты на кожны канал сеткі. У гэтым выпадку даўжынёй маршруту з'яўляецца сума выдаткаў, звязаных з кожным каналам, які быў пройдзены. Іншыя пратаколы маршрутызацыі вызначаюць <<колькасць перасыланняў>>, гэта значыць паказчык, які характарызуе колькасць праходаў, якія пакет павінен здзейсніць на шляху ад крыніцы да пункту прызначэння.
+
+Надзейнасць, у кантэксце алгарытмаў маршрутызацыі, адносіцца да надзейнасці кожнага канала сеткі (звычайна апісваецца у тэрмінах суадносін біт/памылка). Некаторыя каналы сеткі могуць адмаўляць часцей, чым іншыя. Адмовы адных каналаў сеткі могуць быць ліквідаваны лягчэй або хутчэй, чым адмовы іншых каналаў. Пры прызначэнні адзнак надзейнасці могуць быць прыняты ў разлік любыя фактары надзейнасці. Ацэнка надзейнасці звычайна прызначаюцца каналам сеткі адміністратарамі сеткі. Як правіла, гэта адвольныя лічбавыя велічыні.
+
+Пад затрымкай маршрутызацыі звычайна разумеюць адрэзак часу, неабходны для руху пакета ад крыніцы да пункта прызначэння праз аб'яднаную сетку. Затрымка залежыць ад шматлікіх фактараў, уключаючы паласу прапускання прамежкавых каналаў сеткі, чэргі ў порт кожнага
+маршрутызатара на шляху перадачы пакета, перагружанасць сеткі на ўсіх прамежкавых каналах сеткі і фізічная адлегласць, на якую неабходна перамясціць пакет. Так як тут мае месца ўплыў некалькіх важных зменных, затрымка з'яўляецца найбольш агульным і карысным паказчыкам.
+
+Паласа прапускання прыраўноўваецца да наяўнай магутнасці трафіку якога-небудзь канала. Пры іншых роўных паказчыках, канал Ethernet 10 Мбіт пераважны любой арэндаванай лініі з паласой прапускання 64 Кбіт/сек. Хоць паласа прапускання з'яўляецца ацэнкай максімальна дасягальнай прапускной здольнасці канала, маршруты, якія праходзяць праз каналы з большай паласой прапускання, не абавязкова будуць лепшымі за маршрутам, якія праходзяць праз менш хуткадзейныя каналы.
+
 \subsection{Прынцып работы пратакола EIGRP}
 
 EIGRP (англ. Enhanced Interior Gateway Routing Protocol) --- пратакол маршрутызацыі, распрацаваны фірмай Cisco на аснове пратаколу IGRP той жа фірмы. Рэліз пратаколу адбыўся ў 1994 годзе. EIGRP выкарыстоўвае механізм DUAL (diffusing update algorithm) для выбару найбольш кароткага маршруту.
